<?xml version="1.0" encoding="utf-8"?>
<layout>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/xxs">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/xs"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitleQuiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/huge_text_size"
                android:text="@string/view_question_title"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAns1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_ans_1"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAns2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_ans_2"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAns3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_ans_3"/>

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbAns4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ques_ans_4"/>

            <TextView
                android:id="@+id/tvQuesAns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/ques_answer"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>
