<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_purple"
        tools:context=".ui.viewQuiz.ViewQuizFragment">

        <TextView
            android:id="@+id/tvViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/view_quiz_title" />


        <TextView
            android:id="@+id/tvViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/extra_large_text_size"
            android:textAlignment="center"
            android:text="@string/view_quiz_desc" />

        <TextView
            android:id="@+id/tvViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/view_quiz_timer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/switch_views"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCopyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/copy_id_button"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvQuesList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/m"
            android:paddingVertical="@dimen/xxs" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvStudent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="@dimen/m"
            android:paddingVertical="@dimen/xxs"
            android:visibility="gone" />

    </LinearLayout>


</layout>
