<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_purple"
        tools:context=".ui.authentication.login.LoginFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_margin="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:paddingVertical="60dp"/>

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_title"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:textSize="@dimen/huge_text_size"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:hint="@string/email_hint"
                    android:background="@drawable/edit_text_bg"
                    android:autofillHints="email_input"
                    android:inputType="textEmailAddress" />

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password_title"
                    android:paddingTop="@dimen/m"
                    android:textStyle="bold"
                    android:layout_gravity="start"
                    android:textSize="@dimen/huge_text_size"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:hint="@string/password_hint"
                    android:background="@drawable/edit_text_bg"
                    android:autofillHints="email_input"
                    android:inputType="textPassword" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    app:cornerRadius="5dp"
                    android:text="@string/login_button_text"
                    android:layout_marginTop="@dimen/m"/>
            </LinearLayout>
        </LinearLayout>
</layout>
