<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/light_purple"
        tools:context=".ui.addQuiz.AddQuizFragment">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/xs">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="@dimen/xxl">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="@dimen/giant_text_size"
                    android:paddingBottom="@dimen/m"
                    android:text="@string/add_quiz_title"/>

                <TextView
                    android:id="@+id/tvQuizTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:textSize="@dimen/huge_text_size"
                    android:text="@string/add_title"/>

                <EditText
                    android:id="@+id/etQuizTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:hint="@string/add_title"
                    android:background="@drawable/edit_text_bg"
                    android:autofillHints="Add title"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/xxs"
                    android:layout_gravity="start"
                    android:textSize="@dimen/huge_text_size"
                    android:text="@string/add_description"/>

                <EditText
                    android:id="@+id/etDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:hint="@string/add_description_input"
                    android:background="@drawable/edit_text_bg"
                    android:autofillHints="Add description"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/xxs"
                    android:layout_gravity="start"
                    android:textSize="@dimen/huge_text_size"
                    android:text="@string/set_timer_title"/>

                <Spinner
                    android:id="@+id/spTimer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:background="@drawable/edit_text_bg"
                    android:entries="@array/timer_array"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnImportCSV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m"
                    android:paddingVertical="@dimen/xxs"
                    android:paddingHorizontal="@dimen/xxs"
                    android:text="@string/import_csv_title"
                    app:cornerRadius="@dimen/xxs"
                    android:elevation="@dimen/m"/>
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmitQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_quiz"
            android:layout_marginTop="@dimen/xxs" />

    </LinearLayout>
</layout>
